--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "build": "cd ../client && npm run build",
+    "start:prod": "NODE_ENV=production node index.js",
+    "build:prod": "npm run build && npm run start:prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
