--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "immo-management-server",
+  "name": "immofacile-server",
   "version": "1.0.0",
-  "description": "Backend server for rent receipt management system",
+  "description": "ImmoFacile - Backend server for rent receipt management system",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -12,6 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+    "immofacile",
+    "immobilier",
     "rent",
     "receipts",
     "property",
