add sending email with quittance de loyer

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,10 @@ NODE_ENV=development
 DB_PATH=./database/rentReceipts.db
 RECEIPTS_DIR=./receipts
 CORS_ORIGIN=http://localhost:3000
+
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
