--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "pdfkit": "^0.13.0",
     "sqlite3": "^5.1.6"
   },
